syntax = "proto3";

option csharp_namespace = "gRPCTask.InventoryService.Protos";

package inventory;

service Inventory {
  rpc CheckAvailability (InventoryRequest) returns (InventoryResponse) {}
}


message InventoryRequest {
  int32 itemId = 1;
}

message InventoryResponse {
  bool available = 1;
}
